syntax = "proto3";

package boilerplate;

service AuthService {
  rpc CreateBook (CreateBookRequest) returns (Response) {}
}

message CreateBookRequest {
  string Name = 1;
  string Description = 2;
  float Price = 3;
  string Author = 4;
  string Publisher = 5;
}

message Response {
  ErrorData Error = 1;
  int64 CreatedID = 2;
}

message ErrorData {
  int32 Status = 1;
  string Message = 2;
}